# cs-agent-network

./: .env.example  .gitignore  .isort.cfg  .pylintrc  ARCHITECTURE.md  FURTHER_ENHANCEMENTS.md  README.md  friction_log.txt  index.html  langgraph.json  pyproject.toml  pytest.ini  requirements.txt  start_a2a_server.sh  test_a2a_client.py  test_a2a_client_simple.py
a2a_server/: __init__.py  __main__.py  admin_agent.py  admin_agent_executor.py
docs/: ARCHITECTURE.md  BUSINESS_NEEDS_SOLUTION_ALIGNMENT.md  BUSINESS_OVERVIEW.md  FURTHER_ENHANCEMENTS.md  LLM_MODEL_ANALYSIS.md  RESULTS_SNAPSHOT.md  SDLC_AGENTIC_AI.md  START_HERE.md
docs/diagrams/: sdlc-cycle.mmd
scripts/: seed_vector_kb.py
scripts/a2a_admin_server_mock/: __main__.py  admin_agent_executor.py  admin_agent_skills.py  context_utils.py
src/: __init__.py  auth.py  configuration.py  graph.py  graph_alternative.py  langgraph.json  state.py
src/agents/: __init__.py  administration.py  billing.py  human_supervisor.py  orchestrator.py  technical_support.py
src/nodes/: administration.py  assessment.py  billing.py  billing_assessment.py  human_supervisor.py  supervisor.py  technical_support.py
src/orchestration/: __init__.py  graph.py  state.py
src/prompts/: __init__.py  admin_confirmation_message.txt  administration_agent_system.txt  assessment_human.txt  assessment_system.txt  billing_agent_system.txt  billing_assessment_human.txt  billing_assessment_system.txt  billing_response.txt  grader_system.txt  hitl_preparation_system.txt  hitl_preparation_user.txt  technical_agent_system.txt  ticket_classifier.txt  ticket_classifier_system.txt  unclassifiable_response.txt  unclassifiable_response_ai.txt
src/schemas/: assessment.py  classification.py
src/tools/: __init__.py  administration_tools.py  billing_tools.py  compliance_check.py  knowledge_base.py  mcp_client.py  ticket_tools.py  vector_store.py
src/utils/: __init__.py  a2a_client.py  confidence.py  message_utils.py  models.py  prompt_loader.py  risk_assessment.py  routing.py  state_utils.py
tests/: __init__.py  admin_agent_test_cases.txt  billing_agent_test_cases.txt  supervisor_test_cases.txt  technical_agent_test_cases.txt
tests/eval_experiments/: customer-support-e2e-335d1959.csv  larger-customer-support-e2e-d33bea52.csv
tests/evals/: README.md  ds-curated.json  ds-synthetic.json  evaluators.py  examples.py  graders.py  run_evals.py
tests/unit/: README.md  __init__.py  test_billing_node.py  test_evaluators.py  test_message_utils.py  test_state_utils.py
vector_db/: seed_vector_kb.py
vector_db/data/: billing_kb_documents.json
