[project]
name = "cs-agent-network"
version = "0.1.0"
description = "A multi-agent system for customer support ticket handling"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    # LangChain and LangGraph - Pinned versions
    "langchain-core==1.0.2",
    "langchain==1.0.3",
    "langgraph>=1.0.2",
    "langsmith==0.4.39",
    # LangGraph CLI and API
    "langgraph-cli[inmem]>=0.4.5",
    "langgraph-api>=0.4.0",
    "langgraph-supervisor>=0.0.30",
    "langgraph-sdk>=0.1.73",
    # Integrations
    "langchain-openai==1.0.1",
    "langchain-anthropic==1.0.1",
    "langchain-mcp-adapters==0.1.12",
    # Vector DB and Embeddings
    "langchain-community==0.4.1",
    "pinecone>=7.0.0",
    # Utilities
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.3",
    # Authentication
    "pyjwt>=2.10.1",
    "cryptography>=44.0",
    # HTTP client
    "httpx>=0.28.1",
    # A2A SDK
    "a2a-sdk>=0.3.0",
    "python-a2a>=0.5.10",
]

[project.optional-dependencies]
dev = [
    # Code Quality
    "black>=23.0.0",
    "pylint>=3.0.0",
    "isort>=5.12.0",
]
test = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Since imports use "from src.xxx", we need to include src as the root package
# and all its subpackages (nodes, prompts, schemas, tools, utils)
packages = [
    "src",
    "src.nodes",
    "src.prompts",
    "src.schemas",
    "src.tools",
    "src.utils",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/venv/*", "*/.venv/*", "*/htmlcov/*", "*/__pycache__/*"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name (for variable names)
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0801",  # duplicate-code (legitimate duplication for readability/flexibility)
    "W0718",  # broad-exception-caught (catching Exception is sometimes necessary for graceful degradation)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-statements = 50

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "e", "f", "id", "db", "io", "id"]

